--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "gh-pages": "^3.1.0",
-    "homepage": "https://myusername.github.io/my-app",
+    "homepage": "https://github.com/fongvang09/employee-directory",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
