--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "gh-pages": "^3.1.0",
-    "homepage": "https://myusername.github.io",
+    "homepage": "https://myusername.github.io/my-app",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
