--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "gh-pages": "^3.1.0",
-    "homepage": "https://myusername.github.io/my-app",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
@@ -46,5 +45,6 @@
   "devDependencies": {
     "css-loader": "^5.1.1",
     "style-loader": "^2.0.0"
-  }
+  },
+  "homepage": "https://fongvang09.github.io/employee-directory"
 }
